// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemDescriptor component tests snapshot testing for business key available 1`] = `
<div>
  <span>
    HotelBooking
     
    <span
      class="pf-c-badge pf-m-unread"
    >
      T1234HotelBooking01
    </span>
  </span>
  <div
    id="kogito-consoles-tooltip-a1e139d5-4e77-48c9-84ae-34578e904e5a-0.5"
  />
</div>
`;

exports[`ItemDescriptor component tests snapshot testing for business key null 1`] = `
<div>
  <span>
    HotelBooking
     
    <div
      class="pf-c-content pf-u-display-inline"
    >
      <small
        class="pf-u-display-inline"
        data-ouia-component-id="OUIA-Generated-Text-1"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        a1e13
      </small>
    </div>
  </span>
  <div
    id="kogito-consoles-tooltip-a1e139d5-4e77-48c9-84ae-34578e904e5a-0.5"
  />
</div>
`;
